# esp32-s3-watch

./: CMakeLists.txt  README.md  build_log.txt  partitions.csv  sdkconfig  sdkconfig.old
data/: index.html  script.js  style.css
main/: CMakeLists.txt  idf_component.yml  main.c
main/buzzer/: buzzer.c  buzzer.h
main/mywifi/: mywifi.c  mywifi.h
main/qmi8658/: qmi8658.c  qmi8658.h
main/rtc/: pcf85063.c  pcf85063.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
main/ui/fonts/: ui_font_Size32.c  ui_font_Size45.c
main/ui/images/: ui_img_bg1_png.c  ui_img_bg2_png.c  ui_img_bg3_png.c  ui_img_icn_settings_png.c  ui_img_step_png.c
main/ui/screens/: ui_Home.c  ui_Screen1.c  ui_SetTimePage.c  ui_Timer.c  ui_Wakeup.c  ui_loading.c
main/ui_old/: CMakeLists.txt  filelist.txt  ui.c  ui.h
main/ui_old/images/: ui_img_clock_sec_white_png.c  ui_img_clockwise_hour_png.c  ui_img_clockwise_min_png.c  ui_img_flash_png.c
main/ui_old/screens/: ui_Home.c  ui_Screen1.c  ui_SetTimePage.c  ui_Timer.c
